--- a/cours2/assets/css/default.css
+++ b/cours2/assets/css/default.css
@@ -50,6 +50,7 @@ slide:not(.segue) h1 {
 slide:not(.segue) h2 {
     font-family: 'Nunito', sans-serif;
     font-size: 25px;
+    font-weight: bold;
     color: #3c3c3c;
     font-weight: 600;
     padding-bottom: 0px;
