--- a/cours2/assets/css/default.css
+++ b/cours2/assets/css/default.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700|PT+Sans:400,400i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,400i,500,500i,600,600i,700');
 
 em {
     font-style: italic
 }
 strong {
     font-weight: bold;
+}
+
+slides > slide.backdrop {
+  background: white;
 }
 
 aside.gdbar img {
@@ -45,13 +50,13 @@ slide:not(.segue) h1 {
     font-family: 'Nunito', sans-serif;
     font-weight: bold;
     font-size: 40px;
+    margin-bottom: 20px;
 }
 
 slide:not(.segue) h2 {
-    font-family: 'Nunito', sans-serif;
-    font-size: 25px;
-    font-weight: bold;
-    color: #3c3c3c;
+    font-family: 'Lato', sans-serif;
+    font-size: 27px;
+    color: darkred;
     font-weight: 600;
     padding-bottom: 0px;
     margin-bottom: 10px;
