--- a/cours6/assets/css/default.css
+++ b/cours6/assets/css/default.css
@@ -60,7 +60,7 @@ slide:not(.segue) h1 {
     font-family: 'Nunito', sans-serif;
     font-weight: bold;
     font-size: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 slide:not(.segue) h2 {
@@ -74,6 +74,18 @@ slide:not(.segue) h2 {
 
 slide:not(.segue) p {
     font-family: 'PT Sans', sans-serif;
+    line-height: 1.5em;
+}
+
+article p, article li, article li.build, section p, section li {
+    font-family: 'PT Sans', sans-serif;
+    text-align: left;
+    line-height: 1.5em;
+    color: #404040;
+}
+
+slides > slide > hgroup + article p {
+    margin-bottom: 0.25em;
 }
 
 slide:not(.segue) a:link {
